--- a/dos33.html
+++ b/dos33.html
@@ -4520,7 +4520,7 @@ Let the complete clusterfrak of bad design commence in <a href="https://www.nasa
 3433:FF FF FF FF                                                                    ; [78]=T10
 3437:00 00 FF FF                                                                    ; [7C]=T11    S0=VTOC, S1..15=CATALOG
 343B:FF FF FF FF                                                                    ; [80]=T12
-343F:FF FF FF FF                                                                    ; [84]=T13 if we <i>werern't dumb</i> then both the
+343F:FF FF FF FF                                                                    ; [84]=T13 if we <i>weren't dumb</i> then both the
 3443:FF FF FF FF                                                                    ; [88]=T14 VTOC &amp; CATLOG would reside on <b class="ts">T2S5</b> - <b class="ts">T2SF</b>
 3447:FF FF FF FF                                                                    ; [8C]=T15
 344B:FF FF FF FF                                                                    ; [90]=T16 === <a class="dumb" name="HNTDAFS3">HNTDAFS #3</a> ===
