Update total spelling mistakes

--- a/dos33.html
+++ b/dos33.html
@@ -573,7 +573,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 1B5A:8D 7C 1C       162             STA <a class="v" href="#NSPAGE">NSPAGE</a>      ; IS NEW START OF DOS
 1B5D:38             163             SEC
 1B5E:ED 7A 1C       164             SBC <a class="v" href="#RSPAGE">RSPAGE</a>      ; MINUS OLD DOS START
-1B61:F0 9D          165             BEQ <a class="x" href="#BEGIN" >BEGIN</a>       ; (BREIF NO DELTA)              ; ^ NOT mis-spelling: BRanch Equal If
+1B61:F0 9D          165             BEQ <a class="x" href="#BEGIN" >BEGIN</a>       ; (BREIF NO DELTA)              ; ^ NOT misspelt: BRanch Equal If
 1B63:8D 7F 1C       166             STA <a class="v" href="#DELTA" >DELTA</a>       ; IS DELTA
 1B66:AD 7A 1C       167             LDA <a class="v" href="#RSPAGE">RSPAGE</a>      ; RESET START PAGE TO NORMAL
 1B69:8D 0D 1D       168             STA <a class="v" href="#ASTART">ASTART</a>+1
@@ -8913,7 +8913,7 @@ And the corresponding Track / Sector <b>disk map</b>
 <h2>Statistics</h2>
 <p>
 <table>
-    <tr><td>Total Spelling mistakes:             </td><td>  5</td></tr> <!-- :%s/\*spelling\*//gn -->
+    <tr><td>Total Spelling mistakes:             </td><td> 13</td></tr> <!-- :%s/\*spelling\*//gn -->
     <tr><td>Total Functions:                     </td><td> 99</td></tr> <!-- :%s/class="f"//gn -->
     <tr><td>Total Variables:                     </td><td>102</td></tr> <!-- :%s/class="d"//gn -->
     <tr><td>Total Wasted bytes (run-time memory):</td><td>160</td></tr>
