Fix link for Wasted Sectors

--- a/dos33.html
+++ b/dos33.html
@@ -8603,7 +8603,7 @@ small constant, for small data areas, since <span class="todo">large buffers and
 have disk space burning a hole in your diskette).</i>
 </pre>
 </div>
-Apparently the authors of DOS 3.3 never got the memo -- see the section <a href="#WastedSectors">Wasted Sectors</a> below.
+Apparently the authors of DOS 3.3 never got the memo -- see the section <a class='link' href="#WastedSectors">Wasted Sectors</a> below.
 <p>
 For example, <b>DOS does dumb shit like this</b>: Interleaving code and data bloating the program stored on disk.
 <p><b>Example 1:</b>
